# vkPathTracer

./: .env.example  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  SYSTEM.md  THREAD-PLAN.md  UI-PLAN.md  changelog.md  run.ps1  todos.md
assets/audio/: SOURCE.txt
assets/scenes/: animated_cube_test.json  audio_lua_interaction_demo.json  complete_sedan_showcase.json  cornell_native.json  ecs_lifecycle_scripting_demo.json  fps_weapon_gameplay_demo.json  glass_lab.json  hero_hit_demo.json  lisa_hdri_sun_floor_graph.json  lisa_model.json  lisa_shallow_dof_wall.json  live_edit_model_lab.json  louvre_mona_lisa_gallery.json  lowest_lod_asset_showcase.json  material_gauntlet.json  material_shader_physics_showcase.json  mirror_room.json  neon_room.json  particle_benchmark_simple.json  particles_rain_smoke.json  physics_chaos_placeholder.json  ragdoll_demo.json  representative_acceptance_scene.json  sdf_complexity.json  shadow_study.json  skinned_hero_demo.json  sponza_atrium.json  sponza_lite_atrium.json  tessellation_sphere_levels.json  third_person_action_demo.json  toy_car_showcase.json
assets/scripts/: audio_interaction_demo.lua  ecs_lifecycle_dormant.lua  ecs_lifecycle_light.lua  ecs_lifecycle_mover.lua  ecs_lifecycle_spawned_child.lua  ecs_lifecycle_spawner.lua  fps_weapon_demo.lua  generic_fps_camera.lua  live_edit_model_lab.lua  particle_benchmark_spawner.lua  script_budget_probe.lua  script_param_probe.lua  script_sandbox_probe.lua  third_person_action_light.lua  third_person_action_player.lua  warehouse_time_of_day_sun.lua
assets/skies/: SOURCE.txt  kiara_1_dawn_SOURCE.txt  kloppenheim_01_puresky_1k.hdr
bench/: asset_import_capability_matrix.json  lighting_feature_inventory.json  material_pack_1.json
cmake/: BuildInfo.h.in
docs/: GETTING_STARTED.md  UI-PLAN.md  architecture.md  audio_authoring.md  changelog.md  ci-smoke-plan.md  decomposition_checklist.md  lua_scripting.md  motion_60fps_worklog.md  optimization_guide.md  plan.md  platform_contract.md  qt_diagnostics.md  qt_native_surface.md  qt_port.md  qt_threading.md  threading.md  todos.md  window_lifecycle.md
examples/d3d12_dxr_algorithm_graph/: NOTES.md  README.md  graph.json  run_graph.ps1
examples/d3d12_dxr_optimization_graph/: NOTES.md  README.md  graph.json  run_graph.ps1
examples/pathtracer_optimization_graph/: NOTES.md  README.md
experiments/d3d12_dxr_algorithm_graph/: README.md  run_graph.ps1
experiments/d3d12_dxr_optimization_graph/: NOTES.md  README.md  run_graph.ps1
experiments/pathtracer_optimization_graph/: .gitignore  CMakeLists.txt  NOTES.md  README.md  graph.json  math_microbench.cpp  run_graph.ps1
experiments/protopt/: .gitignore  CMakeLists.txt  CMakePresets.json  GETTING_STARTED.md  ProtoptShader.h  README.md  bootstrap-tooling.ps1  experiment.md  main.cpp  run-clangcl.ps1
game/: ASSETS.md  AUDIO_ASSET_MANIFEST.md  GAME.md  GAMEPLAY.md
game/models/: Meshy_AI_5_56mm_Ammunition_Cra_0507152524_texture.glb  Meshy_AI_Black_Ops_Operator_in_0507164325_texture.glb  Meshy_AI_Boho_Western_Muse_0507144919_texture.glb  Meshy_AI_Colt_1911_Pistol_0507162945_texture.glb  Meshy_AI_Comms_01_U_S_Army_Sa_0507165042_texture.glb  Meshy_AI_Desert_Night_Assault__0507161337_texture.glb  Meshy_AI_Green_20_Foot_Cargo_C_0507171501_texture.glb  Meshy_AI_Maelstrom_12_0507163515_texture.glb  Meshy_AI_Modern_Tactical_Opera_0507150958_texture.glb  Meshy_AI_Mud_Caked_6x6_Armored_0507165836_texture.glb  Meshy_AI_Nightfall_AR_15_0507162037_texture.glb  Meshy_AI_Pineapple_Grenade_0507163421_texture.glb  Meshy_AI_Relic_of_Ironwood_0507161634_texture.glb  Meshy_AI_Rusty_5000W_Portable__0507153845_texture.glb  Meshy_AI_Rusty_Vintage_Fuel_Ba_0507155907_texture.glb  Meshy_AI_SP5K_Night_Raider_0507162915_texture.glb  Meshy_AI_Sabotage_Interface_Te_0507165812_texture.glb  Meshy_AI_Signal_Tower_in_the_D_0507165015_texture.glb  Meshy_AI_Stacked_U_S_Army_Amm_0507155007_texture.glb  Meshy_AI_WWII_US_Army_2_5_Ton__0507154947_texture.glb  Meshy_AI_WWII_U_S_Army_Ammuni_0507160533_texture.glb  Meshy_AI_Weathered_Jersey_Barr_0507153544_texture.glb  black_ops_operator_rigged.glb
game/scenes/: relay_yard_lowest_lod_demo.json
scripts/: release_gate_check.ps1  release_gate_check.sh
src/animation/: AnimationAuthority.cpp  AnimationAuthority.h  AnimationClip.cpp  AnimationClip.h  AnimationSampler.cpp  AnimationSampler.h  AnimationSkinning.cpp  AnimationSkinning.h  Skeleton.cpp  Skeleton.h
src/app/: AppBenchmarkActions.cpp  AppBenchmarkActions.h  AppEditorWorldSupport.cpp  AppEditorWorldSupport.h  AppOptions.cpp  AppOptions.h  AppQtSceneDocumentActions.cpp  AppQtSceneDocumentActions.h  AppRuntime.cpp  AppRuntime.h  AppRuntimeQtAssetsAndPlayback.inc  AppRuntimeQtBackendSwitch.inc  AppRuntimeQtCameraAndScene.inc  AppRuntimeQtDockPropertyEdits.inc  AppRuntimeQtDockSyncAndPhysics.inc  AppRuntimeQtReloadAndSceneGraph.inc  AppRuntimeQtRenderLoop.inc  AppRuntimeQtStressGate.inc  AppRuntimeQtViewportInteraction.inc  AppRuntimeRawDesktopFrameLoop.inc  AppRuntimeRawDesktopSetup.inc  AppRuntimeRawDesktopUnavailable.inc  RuntimeMode.h  (+35 more)
tests/: animation_sampler_smoke.cpp  determinism_propagation_smoke.cpp  editor_override_tracker_smoke.cpp  frame_pacer_diag.cpp  frame_pacer_smoke.cpp  hero_hit_demo_smoke.cpp  job_health_smoke.cpp  multi_gpu_accumulation_smoke.cpp  observability_smoke.cpp  physics_contract_smoke.cpp  platform_contract_smoke.cpp  ragdoll_smoke.cpp  scene_contract_smoke.cpp  scene_script_bootstrap_smoke.cpp  script_dispatch_contract_smoke.cpp  scripting_runtime_smoke.cpp  sim_worker_smoke.cpp  skeleton_import_smoke.cpp  skinning_pixel_hash_smoke.cpp  snapshot_bus_smoke.cpp  transform_drag_throughput.cpp  vulkan_backend_snapshot_smoke.cpp  vulkan_gpu_path_tracer_submission_contract.cpp
tools/: auto_rig_humanoid.py  generate_game_lods.ps1  generate_louvre_gallery_assets.ps1  generate_louvre_painting_mosaic.ps1  generate_louvre_side_portraits.ps1  generate_lowest_lod_showcase_scene.ps1  screenshot_window.ps1  smoke.ps1  source_size_report.ps1  todo_audit.ps1  ui_qt_smoke.ps1  ui_qt_smoke.sh
(+511 files in other folders)
